# learn_code

./: README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: VorApp2.2-DVD.1391645987299.pdom  helloSDL.language.settings.xml  hello_eclipse.language.settings.xml  mat_invert.language.settings.xml  myClock.1478653376826.pdom  myGlfw.language.settings.xml  ocv.language.settings.xml  shareddefaults.xml
.metadata/.plugins/org.eclipse.cdt.ui/: cHelpSettings.xml  dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 58.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/RockPaperScissors/: .location  .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.root/: 58.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.debug.core/.launches/: DftMain.launch  HostRead.launch  OpenCV Tutorial 4 - Mix Java+Native OpenCV.launch  Vor App 2.2 - DVD.launch  Vor App 2.3 - Authentication.launch  Vor App 2.3 - Consumer.launch  Vor App 2.3 - Entertainment.launch  Vor App 2.3 - Medical.launch  Webcam.launch  dot.launch  helloSDL.launch  hello_eclipse Release.launch  loadAndRun.launch  mat_invert Debug.launch  myClock (1).launch  myClock.launch  myGlfw.launch  note3_with_app.launch  ocv Debug.launch  window.launch
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml  launchConfigurationHistory.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.egit.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/: server-config.json
.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/history/: segments_1
.metadata/.plugins/org.eclipse.epp.logging.aeri.ui/remote-index/: segments_2
.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.jdt.core/: 3140155207.index  409619362.index  4283245625.index  externalLibsTimeStamps  nonChainingJarsCache  savedIndexNames.txt
.metadata/.plugins/org.eclipse.jdt.debug.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
.metadata/.plugins/org.eclipse.jdt.ui/: QualifiedTypeNameHistory.xml  dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
.metadata/.plugins/org.eclipse.wst.xml.core/: system_catalog.xml
RockPaperScissors/: .cproject  .project  CMakeLists.txt
RockPaperScissors/Debug/: RockPaperScissors  makefile
RockPaperScissors/Debug/src/: myGlfw.d  subdir.mk
RockPaperScissors/src/: main.cpp
fractal/: .cproject  .project  BaseGL.cpp  BaseGL.h  CMakeLists.txt  DoubleEntry.cpp  DoubleEntry.h  MyFont.cpp  MyFont.h  PickStack.cpp  PickStack.h  main.cpp
fractal/Debug/: fractal
fractal/src/: MyFont.cpp  MyFont.h  main.cpp
my3D/: .cproject  .project
my3D/Debug/: makefile  my3D  objects.mk
my3D/src/: main.cpp
myClock/: .project  CMakeLists.txt
myClock/Debug/: fractal  makefile  objects.mk
myGlfw/: .cproject  .project  CMakeLists.txt
myGlfw/Debug/: makefile  myGlfw  objects.mk
myGlfw/Debug/src/: subdir.mk
myGlfw/src/: main.cpp
ocv/: .cproject  CMakeLists.txt  fft.cpp  hough.cpp
ocv/Debug/: makefile  ocv  subdir.mk
ocv/src/: main.cpp
pAudio/: CMakeLists.txt  cppRecord.cpp
(+41 files in other folders)
